Small fix for the text to not overlap with the button

--- a/style/style.scss
+++ b/style/style.scss
@@ -139,7 +139,7 @@ hr {
 .text__container {
 	padding: 0.5rem 2rem 0.5rem 3rem;
 	position: relative;
-
+	margin-bottom: 3rem;
 }
 
 // Icon container and icon styling
